objects/Volunteering_Opportunity__c.object
<CustomObject>
    <description>A custom object to use for signposting YPs into different types of opportunity.</description>
    <fields>
        <fullName>Approx_number_of_volunteering_places__c</fullName>
        <description>Field used to record the number of opportunities uploaded.  This will then be used as our end of year metric.</description>
        <inlineHelpText>Please give a rough number of how many young people could take up this opportunity.</inlineHelpText>
        <label>Approx number of volunteering places</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_for_bags_and_coats__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will there be an area for young people to store their bags and coats?</description>
        <inlineHelpText>Will there be an area for young people to store their bags and coats?</inlineHelpText>
        <label>Area for bags and coats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Places available</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_places__c</fullName>
        <formula>Approx_number_of_volunteering_places__c -  Confirmed_volunteers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Available places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borough_area_this_applies_to__c</fullName>
        <label>Borough/area this applies to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>CSE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CSW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Epsom</fullName>
                </value>
                <value>
                    <fullName>Godalming</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington &amp; Chelsea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borough_of_Signposting_Opp__c</fullName>
        <label>Borough of Signposting Opp.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>CSE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CSW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Epsom</fullName>
                </value>
                <value>
                    <fullName>Godalming</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington &amp; Chelsea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenger_sign_up_action__c</fullName>
        <description>The action Challengers need to take in order to take up the opportunity</description>
        <inlineHelpText>he action Challengers need to take in order to take up the opportunity</inlineHelpText>
        <label>Young Person sign-up action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to cluster the volunteering opportunity occurs in</description>
        <inlineHelpText>Select the cluster the volunteering opportunity occurs in</inlineHelpText>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>2012, 2013, 2014</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Signposting Opportunities</relationshipLabel>
        <relationshipName>Volunteering_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Involvement__c</fullName>
        <label>Confirmed Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed future involvement</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Definitely not</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_volunteers__c</fullName>
        <label>Confirmed volunteers</label>
        <summaryFilterItems>
            <field>HS_Placement__c.Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_Placement__c.Signposting_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <inlineHelpText>Year cycle of the volunteering opportunity.</inlineHelpText>
        <label>Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016 C1</fullName>
                </value>
                <value>
                    <fullName>2016 C2</fullName>
                </value>
                <value>
                    <fullName>2017 C1</fullName>
                </value>
                <value>
                    <fullName>2017 C2</fullName>
                </value>
                <value>
                    <fullName>2018 C1</fullName>
                </value>
                <value>
                    <fullName>2018 C2</fullName>
                </value>
                <value>
                    <fullName>2019 C1</fullName>
                </value>
                <value>
                    <fullName>2019 C2</fullName>
                </value>
                <value>
                    <fullName>2020 C1</fullName>
                </value>
                <value>
                    <fullName>2020 C2</fullName>
                </value>
                <value>
                    <fullName>2021 C1</fullName>
                </value>
                <value>
                    <fullName>2021 C2</fullName>
                </value>
                <value>
                    <fullName>2022 C1</fullName>
                </value>
                <value>
                    <fullName>2022 C2</fullName>
                </value>
                <value>
                    <fullName>2023 C1</fullName>
                </value>
                <value>
                    <fullName>2023 C2</fullName>
                </value>
                <value>
                    <fullName>2024 C1</fullName>
                </value>
                <value>
                    <fullName>2024 C2</fullName>
                </value>
                <value>
                    <fullName>2025 C1</fullName>
                </value>
                <value>
                    <fullName>2025 C2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are volunteers required to have a DBS check?</description>
        <inlineHelpText>Are volunteers required to have a DBS check?</inlineHelpText>
        <label>DBS check?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBS_paid_by_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the DBS check paid by the partner?</description>
        <inlineHelpText>Is the DBS check paid by the partner?</inlineHelpText>
        <label>DBS paid by partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Partner_capacity_confirmed__c</fullName>
        <inlineHelpText>Input date once partner definitely confirmed, they are able to support the stated number of volunteers.</inlineHelpText>
        <label>Date Partner capacity confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_s__c</fullName>
        <description>Date(s) of the volunteering opportunity</description>
        <inlineHelpText>Date(s) of the volunteering opportunity</inlineHelpText>
        <label>Date (s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_this_opportunity_expires__c</fullName>
        <description>Date on which this volunteering opportunity should no longer be offered to young people</description>
        <inlineHelpText>Date on which this volunteering opportunity should no longer be offered to young people</inlineHelpText>
        <label>Date this opportunity expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_organisation__c</fullName>
        <description>Description of organisation, pulled through from Account</description>
        <formula>Organisation__r.Organisation_summary_TCS__c</formula>
        <inlineHelpText>Description of organisation (from the organisation&apos;s record)</inlineHelpText>
        <label>Description of organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_mobility_and_access_issues__c</fullName>
        <description>Details of mobility and access issues</description>
        <inlineHelpText>Give details of mobility and access issues</inlineHelpText>
        <label>Details of mobility and access issues</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_safety_equipment_required__c</fullName>
        <description>Give details of any specific safety equipment needed to be able to volunteer with the partner?</description>
        <inlineHelpText>Give details of any specific safety equipment needed to be able to volunteer with the partner?</inlineHelpText>
        <label>Details of safety equipment required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions_to_Welcome_Day_3__c</fullName>
        <label>Directions to Welcome Day 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directions_to_welcome_day_1__c</fullName>
        <label>Directions to welcome day 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directions_to_welcome_day_2__c</fullName>
        <label>Directions to welcome day 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disability_access_issues__c</fullName>
        <description>Are there any other disability access issues with this partner?</description>
        <inlineHelpText>Are there any other disability access issues with this partner?</inlineHelpText>
        <label>Disability access issues?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_TCS_home_page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on TCS home page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_it_opportunity_ref__c</fullName>
        <description>ID of the opportunity from the Do-it system (if applicable)</description>
        <label>Do-it opportunity ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_placements__c</fullName>
        <label>Filled placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Irregular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_description__c</fullName>
        <description>Full description of the opportunity</description>
        <inlineHelpText>Full description of the opportunity</inlineHelpText>
        <label>Full description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HS_Cluster__c</fullName>
        <label>HS Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCHIC</fullName>
                </value>
                <value>
                    <fullName>BHEN</fullName>
                </value>
                <value>
                    <fullName>HIHO</fullName>
                </value>
                <value>
                    <fullName>EALING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Geocode_last_modified__c</fullName>
        <label>HS Geocode last modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Latitude__c</fullName>
        <inlineHelpText>Latitude coordinates used for the HeadStart Website</inlineHelpText>
        <label>HS Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_Longitude__c</fullName>
        <inlineHelpText>Longitude used for the HeadStart Website</inlineHelpText>
        <label>HS Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_Owner_Systems_use__c</fullName>
        <formula>HS_Owner__r.FirstName&amp;&quot; &quot;&amp;HS_Owner__r.LastName</formula>
        <label>Signposting Opp Owner (Systems use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signposting Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Signposting_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Volunteering_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Volunteering Opportunity used by Head Start?</inlineHelpText>
        <label>HS Volunteering Opp.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HeadStart_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HeadStart Region</label>
        <referenceTo>HS_Region__c</referenceTo>
        <relationshipLabel>Signposting Opportunities</relationshipLabel>
        <relationshipName>Signposting_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Safety_notes__c</fullName>
        <label>Health &amp; Safety notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_briefing__c</fullName>
        <description>Who will give the Health and Safety briefing at the start of the day to the young people?</description>
        <inlineHelpText>Who will give the Health and Safety briefing at the start of the day to the young people? Enter the details here</inlineHelpText>
        <label>Health and Safety briefing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_of_opportunity__c</fullName>
        <description>Image representing the volunteering opportunity</description>
        <inlineHelpText>Image representing the volunteering opportunity</inlineHelpText>
        <label>Image of opportunity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_preview__c</fullName>
        <formula>IF ( Image__c, IMAGE( Image_Link__c , &quot;&quot;, 100, 100), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_or_Group__c</fullName>
        <label>Individual or Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Induction_Date_and_Time__c</fullName>
        <label>Induction Date and Time</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Details__c</fullName>
        <label>Induction Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Induction_Location__c</fullName>
        <label>Induction Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_it_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is it locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_venue_in_a_safe_area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the venue in a part of town where it is safe and advisable for young people from another part of town to come to?</description>
        <inlineHelpText>Is the venue in a part of town where it is safe and advisable for young people from another part of town to come to? Tick the box if yes</inlineHelpText>
        <label>Is the venue in a safe area?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_volunteering_opportunity_quality__c</fullName>
        <label>Is the volunteering opportunity quality?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH_Geo_Code_last_modified__c</fullName>
        <label>LH Geo Code last modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LH_Latitude__c</fullName>
        <inlineHelpText>Latitude coordinates used for the Logging Hours Website</inlineHelpText>
        <label>LH Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH_Longitude__c</fullName>
        <inlineHelpText>Longitude used for the Logging Hours Website</inlineHelpText>
        <label>LH Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_first_aid_cover__c</fullName>
        <description>What level of first aid cover is provided by the partner?</description>
        <inlineHelpText>What level of first aid cover is provided by the partner?</inlineHelpText>
        <label>Level of first aid cover?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_public_liability_insurance__c</fullName>
        <label>Level of public liability insurance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_address_of_opportunity__c</fullName>
        <description>The address, excluding postcode, of the volunteering opportunity</description>
        <inlineHelpText>The address, excluding postcode, of the volunteering opportunity</inlineHelpText>
        <label>Location (address) of opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_1a__c</fullName>
        <description>Enter the location and directions (if useful) of Welcome day 1. If you require more space continue using Location of Welcome day 1b</description>
        <inlineHelpText>Enter the location and directions (if useful) of Welcome day 1.  If you require more space continue using Location of Welcome day 1b</inlineHelpText>
        <label>Location of Welcome day 1a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_1b__c</fullName>
        <description>Continuation field if requiring more space for location and direction for Welcome day 1</description>
        <inlineHelpText>Continuation field if requiring more space for location and direction for Welcome day 1</inlineHelpText>
        <label>Location of Welcome day 1b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_2a__c</fullName>
        <label>Location of Welcome day 2a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_2b__c</fullName>
        <label>Location of Welcome day 2b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_3a__c</fullName>
        <label>Location of Welcome day 3a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day_3b__c</fullName>
        <label>Location of Welcome day 3b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_postcode_of_the_opportunity__c</fullName>
        <description>The postcode of the volunteering opportunity</description>
        <inlineHelpText>The postcode of where the volunteering opportunity is located</inlineHelpText>
        <label>Location (postcode) of the opportunity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <inlineHelpText>Signpost main contact</inlineHelpText>
        <label>Main Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Opportunity_Type__c</fullName>
        <label>Main Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animals &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Befriending &amp; Buddying</fullName>
                </value>
                <value>
                    <fullName>Business Management &amp; Research</fullName>
                </value>
                <value>
                    <fullName>Campaigning &amp; lobbying</fullName>
                </value>
                <value>
                    <fullName>Career development &amp; work experience</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Communication &amp; public speaking</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Elderly</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Human rights</fullName>
                </value>
                <value>
                    <fullName>Life Skills</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Music &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Practical work &amp; DIY</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sports Development</fullName>
                </value>
                <value>
                    <fullName>Teaching training &amp; coaching</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Computers</fullName>
                </value>
                <value>
                    <fullName>Theatre &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Youth Work</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Community development</fullName>
                </value>
                <value>
                    <fullName>Poverty Reduction</fullName>
                </value>
                <value>
                    <fullName>Events and festivals</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_contact_email__c</fullName>
        <label>Main contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_contact_number__c</fullName>
        <label>Main contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nid__c</fullName>
        <description>Nid</description>
        <externalId>true</externalId>
        <label>Nid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offered_at_TCS_KO__c</fullName>
        <description>TCS KO that the opportunity is being offered at</description>
        <inlineHelpText>Select the TCS KO that the opportunity is being offered at</inlineHelpText>
        <label>Offered at TCS KO?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012 October</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_City__c</fullName>
        <inlineHelpText>City in which the opportunity is taking place.</inlineHelpText>
        <label>Opportunity City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Post_code__c</fullName>
        <inlineHelpText>Post code of where the opportunity is taking place.</inlineHelpText>
        <label>Opportunity Post code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Street__c</fullName>
        <inlineHelpText>1st line of address of where the opportunity is taking place.</inlineHelpText>
        <label>Opportunity Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>